# SolaNS

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  SECURITY.md  codama.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  solans-keypair.json  tsconfig.base.json
.github/workflows/: ci.yml  verify.yml
cli/: package.json
cli/src/: context.ts  index.ts
clients/rust/: Cargo.toml
clients/rust/src/: client.rs  hash.rs  lib.rs  pda.rs  state.rs
clients/rust/tests/: gen-vectors.mjs  parity.rs
clients/sdk/: package.json
clients/ts/: package.json
docs/: GOVERNANCE.md
programs/solans/: Cargo.toml
programs/solans/src/: constants.rs  error.rs  events.rs  instructions.rs  lib.rs  state.rs  utils.rs
programs/solans/src/instructions/: accept_offer.rs  auto_renew.rs  bid.rs  burn_name.rs  buy_name.rs  buyback_burn.rs  cancel_auction.rs  cancel_listing.rs  cancel_offer.rs  claim_expired.rs  claim_rewards.rs  init_burn_pool.rs  init_config.rs  init_stake_pool.rs  list_name.rs  lock_transfer.rs  make_offer.rs  redeem_name.rs  register_name.rs  register_with_solans.rs  renew_name.rs  renew_with_solans.rs  resolve.rs  revoke_subdomain.rs  set_controller.rs  set_hosting.rs  set_resolver.rs  set_reverse.rs  set_solans_params.rs  settle_auction.rs  stake.rs  start_auction.rs  tokenize_name.rs  transfer_admin.rs  transfer_name.rs  unstake.rs  update_config.rs  update_listing.rs  update_record.rs  wrap_subdomain.rs
programs/solans/src/state/: auction.rs  config.rs  listing.rs  name_record.rs  offer.rs  reverse_record.rs  stake.rs
scripts/: deploy-devnet.sh  devnet-up.sh  rotate-program-id.sh  smoke-auction.sh  smoke-auto-renew.sh  smoke-buyback.sh  smoke-fee-split.sh  smoke-hosting.sh  smoke-marketplace.sh  smoke-nft.sh  smoke-offers.sh  smoke-resolver-cpi.sh  smoke-staking.sh  smoke-subdomain.sh  verify-build.sh
services/indexer/: Dockerfile  forward-localnet.mjs  (+2 more)
tests/: package.json  vitest.config.ts
(+55 files in other folders)
