[package]
name = "solans"
version = "0.1.0"
description = "SOLANS — decentralized name service on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solans"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.2", features = ["metadata"] }
solana-keccak-hasher = "3.1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
